force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program_Code__c/Plant_Program_Code__c.object-meta.xml
<CustomObject>
    <description>Used to store mapping of allocation for Plant Function.</description>
    <label>Program Code Master</label>
    <nameField>
        <displayFormat>PCM-{000000}</displayFormat>
        <label>PCM Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Code Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>