force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program_Code__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <label>Program Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program_Code</valueSetName>
    </valueSet>
</CustomField>