force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program_Code__c/fields/ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>ProgramCode__c</fullName>
    <label>Program Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>