force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program_Code__c/fields/Ready_for_Plant_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Plant_Assignment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ready for Plant Assignment?</label>
    <type>Checkbox</type>
</CustomField>