force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program_Code__c/fields/Sector_Product_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Sector_Product_Program_Code__c</fullName>
    <formula>TEXT(Auth_Sector__c)+&apos;-&apos;+  TEXT(Product_Type__c)+&apos;-&apos;+ ProgramCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector Product Program Code</label>
    <type>Text</type>
</CustomField>