force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Program_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auth_Sector__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Ready_for_Plant_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>